# gasbeam-paper

./: .fac  .gitignore  Cargo.toml  gas-beam-theory.tex  gas-beam.odt
Foggo Gasbeam/: Dgt.cpp  Dgt.h  Driver.cpp  Ran.cpp  Ran.h  Vector.h  myTrig.cpp  myTrig.h
src/: main.rs
